--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-native-navigation-bar": "^0.1.10",
     "react-native-side-menu": "^0.20.0",
     "react-native-vector-icons": "^2.0.3",
+    "react-native-webview-bridge": "^0.20.3",
     "react-redux": "^4.4.5"
   }
 }
