--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.2",
     "q": "^1.0.1",
+    "react-native-webview-bridge": "^0.20.3",
     "request": "^2.74.0",
     "serve-favicon": "~2.3.0",
     "twitter-node-client": "0.0.6",
