--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,29 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "autobind-decorator": "^1.3.3",
+    "axios": "^0.13.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "moment": "^2.14.1",
     "react": "15.2.1",
     "react-native": "0.31.0",
     "react-native-icon-button": "^1.0.0",
     "react-native-material-design": "^0.3.7",
     "react-native-material-kit": "^0.3.2",
     "react-native-navigation-bar": "^0.1.10",
+    "react-native-refresher": "^0.1.1",
+    "react-native-scrollable-tab-view": "^0.5.4",
     "react-native-side-menu": "^0.20.0",
+    "react-native-swiper": "^1.4.10",
     "react-native-vector-icons": "^2.0.3",
     "react-native-webview-bridge": "^0.20.3",
-    "react-redux": "^4.4.5"
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-promise-middleware": "^4.0.0",
+    "redux-thunk": "^2.1.0"
+  },
+  "devDependencies": {
+    "babel-preset-react-native": "^1.9.0"
   }
 }
