--- a/client/android/settings.gradle
+++ b/client/android/settings.gradle
@@ -1,5 +1,9 @@
 rootProject.name = 'client'
 
 include ':app'
+include ':react-native-video'
+project(':react-native-video').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-video/android')
+include ':react-native-media-kit'
+project(':react-native-media-kit').projectDir = new File('../node_modules/react-native-media-kit/android')
 include ':react-native-material-kit'
 project(':react-native-material-kit').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-material-kit/android')
