--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,15 @@
     "react-native-icon-button": "^1.0.0",
     "react-native-material-design": "^0.3.7",
     "react-native-material-kit": "^0.3.2",
+    "react-native-media-controls": "^0.1.1",
+    "react-native-media-kit": "0.0.14",
     "react-native-navigation-bar": "^0.1.10",
     "react-native-refresher": "^0.1.1",
     "react-native-scrollable-tab-view": "^0.5.4",
     "react-native-side-menu": "^0.20.0",
     "react-native-swiper": "^1.4.10",
     "react-native-vector-icons": "^2.0.3",
+    "react-native-video": "^0.9.0",
     "react-native-webview-bridge": "^0.20.3",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
